--- a/src/CSS/menu.css
+++ b/src/CSS/menu.css
@@ -1,6 +1,6 @@
 .custom-icon {
   color: white;
-  font-size: 4vw;
+  font-size: 3.5vw;
   line-height: 70px;
   cursor: pointer;
   
@@ -8,7 +8,7 @@
 
 .custom-icon:hover {
   color: #000000;
-  font-size: 4.2vw;
+  font-size: 4vw;
   transition: all 0.3s ease;
 }
 
@@ -95,36 +95,35 @@
   width: 100%;
   height: 100vh; /* Aseguramos que ocupe toda la altura */
   padding-top: 70px; /* Para no quedar debajo del header fijo */
+  
 }
 
-.container-header {
- 
-}
 
 .title-container {
+  height: 5vw;
   /* No necesitamos estilos específicos ahora */
 }
 
 .title-menu {
   color: white;
-  font-size: 6vw;
+  font-size: 4vw;
   text-shadow: 3px 5px #645e5e9c;
   font-weight: bold;
   
 }
 .header {
-  width: 85%;
-  height: 70px;
+  width: 100%;
+  height: 5vw;
   position: fixed;
   top: 0;
   background-color: #4285f4;
   display: flex;
   align-items: center;
-  padding-right: 20px;
-  margin-top: 2vw;
+  padding:10px;
+  
    display: flex;
-  margin-left: 33vw;
-  justify-content: space-around;
+  
+  justify-content: space-between;
   align-items: center;
  
  
@@ -132,15 +131,33 @@
 .nombre-sidebar{
   color: #4285f4;
   margin-left: 50px;
+
+}
+
+.option{
+  background-color: rgb(0, 0, 0);
+  width: 100%;
+  height: 4vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  
+}
+.option-button{
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
+.option-button:hover{
+  color: #4285f4;
+  font-weight: bold;
 }
 
 .menubox {
-  background-color: white;
-  width: 65%;
-  margin: 25px;
-  border-radius: 30px;
-  height: 70vh; /* Volvemos a la altura original */
-  box-shadow: 3px 3px #d9d9d9;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  
+  top:0;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -148,37 +165,53 @@
   align-content: center;
 }
 
-.menu-container {
+.menu-superior{
+  
+  height: 6vw;
+  width: 100%;
   display: flex;
-  width: 90%;
-  margin: 10px;
   align-items: center;
-  height: 60%;
   padding: 20px;
+  background: rgb(235, 235, 235);
+}
+
+.reporte{
+  border-radius: 5px;
+  background: #000000;
+  color: white;
+  margin: 3px;
   
 }
-
-.menu-button {
-  height: 130px;
-  margin: 10px;
+.reporte:hover{
   border-radius: 5px;
-  background-color: #4285f4;
-  border: 3px solid #4285f4;
-  padding: 10px 5px;
-  color: white;
-  width: 90%;
-  box-shadow: 3px 3px #d9d9d9;
-  cursor: pointer;
-  font-weight: bold;
- 
+  background: #747373;
+  box-shadow: 2px 2px #eeecec;
+  transform: translateY(-2px);
+  transition: all 0.3s ease;
+  
 }
-
-.menu-button:hover {
-  background-color: #000000;
-  box-shadow: 0px 5px #c0c0c0;
+.nc{
+  border-radius: 5px;
+  background: #239f65;
+  color: white;
+  border: 2px solid #239f65;
+}
+.nc:hover{
+  
+  background: #1e8449;
+  box-shadow: 2px 2px #c0c0c0;
   transform: translateY(-2px);
   transition: all 0.3s ease;
 }
+.menu-matriz{
+  border-top: 5px solid #c4c4c4;
+  width: 100%;
+  height: 33vw;
+  padding: 10px;
+}
+
+
+
 
 /*
 
