--- a/src/CSS/menu.css
+++ b/src/CSS/menu.css
@@ -1,5 +1,5 @@
 .custom-icon {
-  color: white;
+  color: rgb(255, 255, 255);
   font-size: 3.5vw;
   line-height: 70px;
   cursor: pointer;
@@ -8,7 +8,7 @@
 
 .custom-icon:hover {
   color: #000000;
-  font-size: 4vw;
+  font-size: 3.7vw;
   transition: all 0.3s ease;
 }
 
@@ -87,7 +87,7 @@
 }
 
 .background-container-menu {
-  background-color: #4285f4;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   justify-content: center; /* Centra verticalmente los elementos */
@@ -95,19 +95,20 @@
   width: 100%;
   height: 100vh; /* Aseguramos que ocupe toda la altura */
   padding-top: 70px; /* Para no quedar debajo del header fijo */
-  
+ 
+
 }
 
 
 .title-container {
   height: 5vw;
-  /* No necesitamos estilos específicos ahora */
+   /* No necesitamos estilos específicos ahora */
 }
 
 .title-menu {
-  color: white;
+  color: #4285f4;
   font-size: 4vw;
-  text-shadow: 3px 5px #645e5e9c;
+  text-shadow: 3px 5px #cbcbdd9c;
   font-weight: bold;
   
 }
@@ -116,12 +117,12 @@
   height: 5vw;
   position: fixed;
   top: 0;
-  background-color: #4285f4;
+  background-image: linear-gradient(to right, white,white,#a7a7b19c,#7e7c7c);
   display: flex;
   align-items: center;
   padding:10px;
   
-   display: flex;
+  display: flex;
   
   justify-content: space-between;
   align-items: center;
@@ -135,17 +136,25 @@
 }
 
 .option{
-  background-color: rgb(0, 0, 0);
+  background-color: white;
   width: 100%;
   height: 4vw;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin-top: -2px;
+  border-top: 1px solid #a7a7b19c;
   
 }
 .option-button{
-  color: rgb(255, 255, 255);
+  color: #000000;
   text-decoration: none;
+  font-weight: bold;
+}
+.option-button2{
+  color: #4285f4;
+  text-decoration: none;
+  font-weight: bold;
 }
 .option-button:hover{
   color: #4285f4;
@@ -166,51 +175,110 @@
 }
 
 .menu-superior{
+  box-shadow: 0px 5px 5px rgb(243, 232, 232);
   
-  height: 6vw;
+  height: 5vw;
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 20px;
-  background: rgb(235, 235, 235);
+  background: rgb(255, 255, 255);
+  border-top: 1px solid #a7a7b19c;
 }
 
+.cotizatitle{
+  color: #4285f4;
+  font-size: 2.5vw;
+  ;
+  font-weight: bold;
+}
 .reporte{
-  border-radius: 5px;
-  background: #000000;
+  border-radius: 3px;
+  background-image: linear-gradient(to right,#8282859c,#7e7c7c,black);
   color: white;
   margin: 3px;
+  border-color: white;
+  box-shadow: 0px 0px 10px rgba(202, 189, 189, 0.7);
   
 }
 .reporte:hover{
   border-radius: 5px;
-  background: #747373;
+  background: #000000;
   box-shadow: 2px 2px #eeecec;
   transform: translateY(-2px);
   transition: all 0.3s ease;
   
 }
 .nc{
-  border-radius: 5px;
-  background: #239f65;
+  border-radius: 3px;
+  background-image: linear-gradient(to right,#4285f4, blue,#4285f4);
   color: white;
-  border: 2px solid #239f65;
+  border-color: #4285f4;
+  box-shadow: 0px 0px 10px rgba(202, 189, 189, 0.7);
 }
 .nc:hover{
   
-  background: #1e8449;
+  background: #000000;
+  border-color: black;
   box-shadow: 2px 2px #c0c0c0;
   transform: translateY(-2px);
   transition: all 0.3s ease;
 }
 .menu-matriz{
-  border-top: 5px solid #c4c4c4;
+  margin-top: 20px;
   width: 100%;
   height: 33vw;
   padding: 10px;
 }
+.filtros{
+  display: flex;
+  justify-content: space-around;
+  
+}
+
+.matriz{
+  border: 1px solid #c0c0c0;
+  height: 80%;
+  margin-top: 30px;
+  border-radius: 10px;
+  overflow: auto;
+  box-shadow: 0px 0px 10px rgba(202, 189, 189, 0.7);
+
+}
+.aprobada {
+  color: green;
+}
+
+.pendiente {
+  color: yellow;
+}
+
+.rechazada {
+  color: red;
+}
+.table-datos:hover{
+  background-color: #f0f0f0;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
 
 
+/*
+.table-tr{
+  border: 3px solid rgb(0, 0, 0);
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  
+}
+
+.table-thead{
+ border: 3px solid red;
+ width: 100%;
+ 
+  
+}*/
 
 
 /*
