--- a/src/CSS/clientes.css
+++ b/src/CSS/clientes.css
@@ -14,3 +14,13 @@
     align-content: center;
     align-items: center;
 }
+.botonlimpiar{
+    height: 2.5vw;
+    width: 10%;
+    border-radius: 5px;
+    background-color: #e53935;
+    color: white;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+}
