--- a/src/CSS/configuracion.css
+++ b/src/CSS/configuracion.css
@@ -12,6 +12,10 @@
   transition: all 0.3s ease;
 }
 
+
+
+
+
 .btn-menu {
   display: none;
 }
@@ -82,14 +86,14 @@
   font-size: 18px;
 }
 
-.background-container-menu {
+.background-container-config {
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
   justify-content: center; /* Centra verticalmente los elementos */
   align-items: center;
   width: 100%;
-  height: 100vh; /* Aseguramos que ocupe toda la altura */
+  height: 18vh; /* Aseguramos que ocupe toda la altura */
   padding-top: 70px; /* Para no quedar debajo del header fijo */
  
 
@@ -108,7 +112,7 @@
   font-weight: bold;
   
 }
-.header {
+.headerprod {
   width: 100%;
   height: 5vw;
   position: fixed;
@@ -131,13 +135,14 @@
 
 }
 
-.option{
+.optionconfig{
   background-color: white;
   width: 100%;
   height: 4vw;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  align-content: center;
   margin-top: -2px;
   border-top: 1px solid #a7a7b19c;
   
@@ -146,6 +151,7 @@
   color: #000000;
   text-decoration: none;
   font-weight: bold;
+  text-align: center;
 }
 .option-button2{
   color: #4285f4;
@@ -157,12 +163,12 @@
   font-weight: bold;
 }
 
-.menubox {
+.menuboxconfig {
   background-color: rgb(255, 255, 255);
   width: 100%;
   
   top:0;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -183,6 +189,39 @@
   border-top: 1px solid #a7a7b19c;
 }
 
+.infofc{
+    
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    padding: 10px;
+    margin-top: 30px;
+    box-shadow: 0 0 5px 7px #d9e2f1;
+}
+
+.infofccontainer{
+    width: 100%;
+    display: flex;
+    height: 50vh;
+    justify-content: space-around;
+   
+    width: 80%;
+    align-items: center;
+    
+    
+}
+.infoblock{
+    
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 20px;
+}
+.infofcdata{
+    margin-bottom: 20px;
+}
 .cotizatitle{
   color: #4285f4;
   font-size: 2.5vw;
@@ -226,6 +265,7 @@
   width: 100%;
   height: 33vw;
   padding: 10px;
+  
 }
 .filtros{
   display: flex;
@@ -236,7 +276,7 @@
   margin-right: 70px;
 }
 
-.matriz {
+.matrizconfig {
   border: 1px solid #e9e6f3;
   height: 80%;
   margin-top: 30px;
@@ -244,8 +284,8 @@
   overflow-y: auto; /* Asegurar scroll vertical */
   box-shadow: 0px 0px 15px #dadada;
   scroll-snap-type: y mandatory; /* Activa el desplazamiento escalonado */
-  overflow-y: scroll;
-  
+
+
 }
 
 .aprobada {
@@ -391,4 +431,3 @@ tbody {
   width: 22%;
   margin-bottom: 20px;
 }
-
