--- a/src/CSS/menu.css
+++ b/src/CSS/menu.css
@@ -212,6 +212,8 @@
   color: white;
   border-color: #4285f4;
   box-shadow: 0px 0px 10px rgba(202, 189, 189, 0.7);
+  height: 5vw;
+  text-decoration: none;
 }
 .nc:hover{
   
