--- a/src/CSS/productos.css
+++ b/src/CSS/productos.css
@@ -195,205 +195,17 @@
   ;
   font-weight: bold;
 }
-.reporte{
-  border-radius: 3px;
-  background-image: linear-gradient(to right,#8282859c,#7e7c7c,black);
-  color: white;
-  margin: 3px;
-  border-color: white;
-  box-shadow: 0px 0px 10px rgba(202, 189, 189, 0.7);
-  
-}
-.reporte:hover{
-  border-radius: 5px;
-  background: #000000;
-  box-shadow: 2px 2px #eeecec;
-  transform: translateY(-2px);
-  transition: all 0.3s ease;
-  
-}
-.nc{
-  border-radius: 3px;
-  background-image: linear-gradient(to right,#4285f4, blue,#4285f4);
-  color: white;
-  border-color: #4285f4;
-  box-shadow: 0px 0px 10px rgba(202, 189, 189, 0.7);
-}
-.nc:hover{
-  
-  background: #000000;
-  border-color: black;
-  box-shadow: 2px 2px #c0c0c0;
-  transform: translateY(-2px);
-  transition: all 0.3s ease;
-}
-.menu-matriz{
+
+.productos-container{
   margin-top: 20px;
   width: 100%;
   height: 33vw;
   padding: 10px;
-}
-.filtros{
-  display: flex;
-  justify-content: space-around;
-  
-}
-.filtros-box{
-  margin-right: 70px;
-}
-
-.matriz {
-  border: 1px solid #e9e6f3;
-  height: 80%;
-  margin-top: 30px;
-  border-radius: 3px;
-  overflow-y: auto; /* Asegurar scroll vertical */
-  box-shadow: 0px 0px 15px #dadada;
-  scroll-snap-type: y mandatory; /* Activa el desplazamiento escalonado */
-  overflow-y: scroll;
-  
-}
-
-.aprobada {
-  color: green;
-}
-
-.pendiente {
-  color: yellow;
-}
-
-.rechazada {
-  color: red;
-}
-.table-trdatos:hover td {
-  background: #ebf2fc;
-  cursor: pointer;
-  color: #4285f4;
-      
-  height: 5vw;
-  transition: background-color 0.3s ease, color 0.3s ease;
-
-}
-/*encabezado de la tabla*/
-.table-tr th {
-  /*background-color: #ebf2fc;*/
-  position: sticky;
-  height: 2vw;
-  top: 0;
-  z-index: 10;
-background: #f5f4f7;
-
-}
-
-.table-thead{
-  
-}
-
-
-thead { /*lineas debajo del encabezado*/
-  position: sticky;
-  top: 0;
-  background-color: #d6d6d6;
-  z-index: 100;
-  outline: 0.5px solid #e9e6f3;
-  padding-bottom: 0;
-  height: 40px; /* Ajusta según el tamaño del encabezado */
-  
-}
-thead::after {
-  content: "";
-  display: block;
-  height: 2px; /* Grosor del borde */
-  background-color: #e9e6f3;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-/* Contenedor de la tabla */
-.table-trdatos {
-  overflow-y: auto; /* Scroll vertical */
-  max-height: 500px; /* Ajusta según necesites */
-  scroll-snap-type: y mandatory; /* Activamos el scroll escalonado en eje Y */
-  
-}
-
-/* Filas de la tabla */
-tr {
-  scroll-snap-align: start; /* Cada fila se alinea al inicio */
-}
-
-.table{
-
-  margin-top: 130px;
-  
-}
-/*lineas de filas*/
-.table-trdatos {
-  border-bottom: 1px solid #e7e7e7;
-}
-/* Estilos generales para los iconos */
-.bi-pencil-fill,
-.bi-file-earmark-arrow-down-fill,
-.bi-trash3-fill,
-.bi-eye-fill {
-    background-color: transparent !important;
-    margin: 5px;
-    display: none;
-    color: black; /* Color inicial */
-}
-
-/* Mostrar los iconos solo cuando el mouse está sobre la fila */
-tr:hover .bi-pencil-fill,
-tr:hover .bi-file-earmark-arrow-down-fill,
-tr:hover .bi-trash3-fill,
-tr:hover .bi-eye-fill {
-    display: inline-block; /* O el tipo de display que prefieras */
-}
-
-/* Cambiar color solo cuando el usuario pasa sobre el icono */
-.bi-pencil-fill:hover,
-.bi-file-earmark-arrow-down-fill:hover,
-.bi-trash3-fill:hover,
-.bi-eye-fill:hover {
-    cursor: pointer;
-    color: #4285f4; /* Color al hacer hover */
-}
-.table-datostotal{
-  
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 80%;
-  height: 5vw;
-  border-bottom: transparent;
-}
-.crud-icons{
-  
  
+}
+
+.productos-box{
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 3vw;
-  width: 50%;
-  background-color: transparent !important;
-}
-
-.crud-icons_hover {
-  background-color: transparent !important;
-  color: white !important;
-}
-.table-datos,
-.table-header {
-  text-align: center; /* Asegura que todo el texto esté centrado */
-  vertical-align: middle; /* Centra verticalmente el contenido */             
-}
-
-tbody {
-  margin-top: 40px; /* Da espacio debajo del encabezado */
   
-}
-.table-header-total{
-  width: 22%;
-  margin-bottom: 20px;
+  width: 100%;
 }
