--- a/src/CSS/productos.css
+++ b/src/CSS/productos.css
@@ -98,7 +98,15 @@
  
 
 }
-
+.encabezado-fijo {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: white;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+}
 
 .title-container {
   height: 5vw;
@@ -115,8 +123,9 @@
 .headerprod {
   width: 100%;
   height: 5vw;
-  position: fixed;
+
   top: 0;
+  z-index: 100;
   background-image: linear-gradient(to right, white,white,#a7a7b19c,#7e7c7c);
   display: flex;
   align-items: center;
@@ -166,7 +175,7 @@
 .menuboxprod {
   background-color: rgb(255, 255, 255);
   width: 100%;
-
+padding-top: 20vw;
   top:0;
   height: 80vh;
   display: flex;
@@ -176,12 +185,13 @@
   align-content: center;
 }
 
-.menu-superior{
+.menu-superior-prod{
   box-shadow: 0px 5px 5px #d9e2f1;
-  
+ 
   height: 5vw;
   width: 100%;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   padding: 20px;
@@ -205,7 +215,28 @@
 }
 
 .productos-box{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  padding: 20px;
+
+}
+.card{
+ 
   display: flex;
-  
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+.buscador-container {
   width: 100%;
+  padding: 10px 20px;
+  background-color: white;
+  
+}
+
+.buscador-container input {
+  max-width: 400px;
+  margin: 0 auto;
 }
